# fha-acas-codeact

./: .gitignore  LICENSE  README.md  azure.yaml  pyproject.toml
agent/: .agentignore  .dockerignore  .env.example  Dockerfile  agent.manifest.yaml  agent.yaml  main.py  requirements.txt
docs/: ACASandboxesIntro.md  architecture.md  cleanup.md  codeactintro.md  deploy.md  fha-acas-codeact.drawio
infra/: main.bicep  main.parameters.json  resources.bicep
infra/modules/: foundry.bicep  monitoring.bicep  rbac.bicep  registry.bicep  sandboxgroup.bicep
prompts/: easy.txt  hard.txt  outcome.txt  vague.txt
scripts/: compare_models.py  deploy_comparison_model.py  grant_agent_roles.sh  orchestrate_codeact.py  query_appinsights.py  run_local_codeact.py  three_case_latency.py  timing_probe.py
